# AtlasUtilities

./: .gitignore  AtlasCartesianWrapper.cpp  AtlasCartesianWrapper.h  AtlasExtractSubmesh.cpp  AtlasExtractSubmesh.h  AtlasFromNetcdf.cpp  AtlasProjectMesh.cpp  AtlasProjectMesh.h  AtlasToNetcdf.cpp  AtlasToNetcdf.h  CMakeLists.txt  GenerateRectAtlasMesh.cpp  GenerateRectAtlasMesh.h  GenerateRectMylibMesh.cpp  GenerateRectMylibMesh.h  LICENSE  README.md  TestAtlasFromNetcdf.cpp  atlasIconLaplaceDriver.cpp  atlas_interface.hpp  generated_iconLaplace.hpp  my_scatter.m  my_triplot.m  mylib.cpp  mylib.hpp  mylibIconLaplaceDriver.cpp  plot_mesh.m  plot_stripes.m
cmake/: FindNetCDF.cmake  FindNetCDFcxx4.cmake  atlas_utilsConfig.cmake
docs/: README.md
libs/: CMakeLists.txt  mylib.cpp  mylib.hpp  toylib.cpp  toylib.hpp
scripts/: CMakeLists.txt  convergence_plot.m  convergence_plot.py  convergence_plot_bad.m  convergence_plot_dec.m  convergence_plot_inc.m  divergence_settings.m  run_tests.sh
stencils/: CMakeLists.txt  atlasDiamondLaplacianDriver.cpp  atlasIconDiamondLaplacianDriver.cpp  atlasIconLaplaceDriver.cpp  diffOpsOnSphere.cpp  generated_iconDiamondLaplace.hpp  generated_iconLaplace.hpp  mylibIconLaplaceDriver.cpp  shallowWater.cpp
stencils/interfaces/: CMakeLists.txt  atlas_interface.hpp  mylib_interface.hpp  toylib_interface.hpp  unstructured_interface.hpp
stencils/io/: CMakeLists.txt  atlasIO.cpp  atlasIO.h  toylibIO.cpp  toylibIO.h
tests/: CMakeLists.txt  TestAtlasFromNetcdf.cpp  TestAtlasMeshGen.cpp  TestAtlasProjectMesh.cpp  TestAtlasToNetcdf.cpp  TestStrMeshGen.cpp
utils/: AtlasCartesianWrapper.cpp  AtlasCartesianWrapper.h  AtlasExtractSubmesh.cpp  AtlasExtractSubmesh.h  AtlasFromNetcdf.cpp  AtlasFromNetcdf.h  AtlasToNetcdf.cpp  AtlasToNetcdf.h  CMakeLists.txt  GenerateRectAtlasMesh.cpp  GenerateRectAtlasMesh.h  GenerateRectMylibMesh.cpp  GenerateRectMylibMesh.h  GenerateRectToylibMesh.cpp  GenerateRectToylibMesh.h  GenerateStrIndxAtlasMesh.cpp  GenerateStrIndxAtlasMesh.h  README.md  ToylibGeomHelper.cpp  ToylibGeomHelper.h
