add_subdirectory(io)
add_subdirectory(interfaces)

add_executable(atlasIconLaplaceDriver atlasIconLaplaceDriver.cpp)
target_link_libraries(atlasIconLaplaceDriver atlas eckit atlasUtilsLib atlasIOLib)

add_executable(atlasIconDiamondLaplacianDriver atlasIconDiamondLaplacianDriver.cpp)
target_link_libraries(atlasIconDiamondLaplacianDriver atlas eckit atlasUtilsLib atlasIOLib)

add_executable(atlasShallowWater shallowWater.cpp)
target_link_libraries(atlasShallowWater atlas eckit atlasUtilsLib)

add_executable(mylibIconLaplaceDriver mylibIconLaplaceDriver.cpp)
target_link_libraries(mylibIconLaplaceDriver atlasUtilsLib toylib atlasIOLib)

install(TARGETS atlasIconLaplaceDriver atlasIconDiamondLaplacianDriver atlasShallowWater mylibIconLaplaceDriver 
       EXPORT atlasutils DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/)

