add_executable(atlasIconLaplaceDriver atlasIconLaplaceDriver.cpp)
target_link_libraries(atlasIconLaplaceDriver atlas eckit atlasUtilsLib)

add_executable(atlasShallowWater shallowWater.cpp)
target_link_libraries(atlasShallowWater netcdf atlas eckit atlasUtilsLib ${NETCDF_LIBRARY})

add_executable(gradienTest graientsOnSphere.cpp)
target_link_libraries(gradienTest netcdf atlas eckit atlasUtilsLib ${NETCDF_LIBRARY})

add_executable(mylibIconLaplaceDriver mylibIconLaplaceDriver.cpp)
target_link_libraries(mylibIconLaplaceDriver atlasUtilsLib myLib)

add_executable(atlasIconDiamond atlasIconDiamond.cpp)
target_link_libraries(atlasIconDiamond atlasUtilsLib myLib)